# Farsight-toolkit

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Dendrogram_data_format_sample.txt  Dendrogram_header_format_sample.txt  FarsightConfig.h.in  Farsight_ModelView_Programming.ppt  Install.txt  PYTHON.txt  can_obama_change_library_names_too.py  farsight_gui.ppt  license.txt  readme.txt  testfile  testfile2
Active_Validation/: ActiveValidation.cpp  ActiveValidation.h  ActiveValidationWizard.cpp  ActiveValidationWizard.h  Active_Validation_main.cpp  CMakeLists.txt
Batch_Distance2Device/: CMakeLists.txt  main.cpp
CellTrackerLib/: CMakeLists.txt  CMakeLists1.cmake  MultiFrameCellTracker.cpp  MultiFrameCellTracker.h  ftkTrackFeatures.cpp  ftkTrackFeatures.h  helpers.cpp  helpers.h  multi_main.cpp
ClusClus/: Biclustering.cpp  Biclustering.h  CMakeLists.txt  Dendrogram.cpp  Dendrogram.h  Heatmap.cpp  Heatmap.cpp.orig  Heatmap.h  HeatmapWindow.cpp  HeatmapWindow.cpp.orig  HeatmapWindow.h  HeatmapWindowForNewSelection.cpp  Kmeans.cpp  Kmeans.h  LocalGeometryRef.cpp  LocalGeometryRef.h  ProgressionHeatmapWindow.cpp  ProgressionHeatmapWindow.h  Tree.cpp  Tree.h  clusclus.cpp  clusclus.h  clusclusMainwindow.cpp  clusclusMainwindow.h  clusgap.cpp  clusgap.h  main.cpp
ColorSegmentation/: CMakeLists.txt  Col_Slice.h  ColorSegmentation.cpp  ColorSegmentation.h  Color_Image.cpp  Color_Image.h  PPM_Image.cpp  PPM_Image.h  RGB_Atype.cpp  RGB_Atype.h  RGB_Slice.h  RLI_Slice.h  dhArray3D.h  dhClassifiers.h  dhColors.cpp  dhColors.h  dhEvalState.cpp  dhEvalState.h  dhHistogram.cpp  dhHistogram.h  dhImage.cpp  dhImage.h  dhSeedGrid.cpp  dhSeedGrid.h  dhSlice.cpp  dhSlice.h  extrema.cpp  main.cpp
Daniela/: CMakeLists.txt  Daniela.cpp  Daniela.h  Daniela_GUI.cpp  Daniela_GUI.h  Daniela_main.cpp  itkRGBToHSVColorSpacePixelAccessor.h  main.cpp
Dendrogram/: CMakeLists.txt  ClusClus.cpp  ClusClus.h  Dendro_main.cpp  Dendrogram.cpp  Dendrogram.h  Dendrogram_Selection.cpp  Dendrogram_Selection.h
FTKImage/: CMakeLists.txt  ftkImage.cpp  ftkImage.h  ftkImage.txx  vtkBXDProcessingWin32Header.h  vtkKWImage.cxx  vtkKWImage.h  vtkKWImageIO.cxx  vtkKWImageIO.h  vtkLSMReader.cxx  vtkLSMReader.h
GUI/: AbstractModel.h  CMakeLists.txt  ControlBar.cpp  ControlBar.h  Histogram.cpp  Histogram.h  ImageBrowser5D.cpp  ImageBrowser5D.h  ModuleWidget.cpp  ObjectSelection.cpp  ObjectSelection.h  PlotWindow.cpp  PlotWindow.h  ResultLoadWidget.cpp  ScatterView.cpp  ScatterView.h  SegmentationModel.cpp  SegmentationModel.h  SegmentationView.cpp  SegmentationView.h  SegmentationWindow.cpp  SegmentationWindow.h  SliceView5D.cpp  SliceView5D.h  TableModel.cpp  TableModel.h  TableWindow.cpp  TableWindow.h  main.cpp
InstallRules/: CMakeLists.txt  CompleteBundles.cmake.in
NuclearSegmentation/: CMakeLists.txt  HistoProjectDef.xml  Histo_Input_Image.xml  example.xml  ftkNuclearSegmentation.cpp  ftkNuclearSegmentation.h
PatternAnalysis/: CMakeLists.txt
PowerOf2Tiling/: CMakeLists.txt  main.cpp
Rendering/: CMakeLists.txt  main.cpp
RollingBallFilter/: CMakeLists.txt  RollingBallFilter.cpp  RollingBallFilter.h  main.cpp
SPD/: CMakeLists.txt  HeatmapWindow.cpp  HeatmapWindow.cpp.orig  HeatmapWindow.h  HeatmapWindowForNewSelection.cpp  HeatmapWindowForNewSelection.h  LCSAnalysis.cpp  LCSAnalysis.h  PSC.cpp  ProgressionHeatmapWindow.cpp  ProgressionHeatmapWindow.h  SPDAnalysisModel.cpp  SPDAnalysisModel.h  main.cpp  spdmainwindow.cpp  spdmainwindow.h  spdtestwindow.cpp  spdtestwindow.h  spdtestwindowForNewSelection.cpp  spdtestwindowForNewSelection.h  transportSimplex.h
SPH_transform/: CMakeLists.txt  SPH_test.cpp  Spherical_Harmonic_transform.cpp  Spherical_Harmonic_transform.cpp.orig  Spherical_Harmonic_transform.h  ftkLabelImageToFeatures.txx
SQLite/: CMakeLists.txt
SampleEditor/: CMakeLists.txt  SampleEditor.cpp  SampleEditor.cpp.orig  SampleEditor.h  main.cpp
SegmentationCommon/: CMakeLists.txt  ftkFeatures.cpp  ftkFeatures.h  ftkIntrinsicFeatures.cpp  ftkIntrinsicFeatures.h  ftkLabelImageToFeatures.h  ftkLabelImageToFeatures.txx  ftkObject.cpp  ftkObject.h  ftkObjectAssociation.cpp  ftkObjectAssociation.h  ftkSegmentationResult.cpp  ftkSegmentationResult.h  itkLabelGeometryImageFilter.txx
TraceEdit/: CMakeLists.txt  Trace.cpp  Trace.h  TraceXMLReader.cxx  TraceXMLReader.h  View3D.cxx  View3D.h  View3DHelperClasses.h  View3d.cxx  trace.cpp  vtkSeedViewerDriver.cxx  vtkTraceViewerDriver.cxx
Tracing/: CMakeLists.txt
Tracking/: CMakeLists.txt  CellSegmentation.ini  anisodiff.cpp  background_subtraction.cpp  compute_extra_associations.cpp  contrast_enhancement.cpp  extract_slices.cpp  ftkTrackFeatures.h  helpers.cpp  helpers.h  medianfilter.cpp  remove_small_components.cpp  render_tracks.cpp  segmentation.cpp  summary.cpp  threshold_segmentation.cpp  tracker.py  tracker_2color.py  tracker_ena.py  tracker_harvard.py  tracking.cpp  tracking_multiframe.cpp  unmix.cpp  unmix_threshold.cpp  vessel_thinning.cpp
Vessel/: CMakeLists.txt  farsight_surface_segmentation.cpp  farsight_surface_segmentation.h  parse_xml.cpp  parse_xml.h  xml_output_template.doc
VesselTracer/: CMakeLists.txt  Common.cxx  Common.h  Tracer_main.cxx  ftkVesselTracer.cxx  ftkVesselTracer.h
Xml_Generator/: CMakeLists.txt  Xml_Generator.cpp  Xml_Generator.h  xml_main.cpp
fregl/: CMakeLists.txt  fregl_coarse2fine_register.cxx  fregl_coarse2fine_register.h  fregl_image_manager.cxx  fregl_image_manager.h  fregl_joint_register.cxx  fregl_joint_register.h  fregl_pairwise_register.cxx  fregl_pairwise_register.h  fregl_reg_record.cxx  fregl_reg_record.h  fregl_result_record.cxx  fregl_result_record.h  fregl_roi.cxx  fregl_roi.h  fregl_space_transformer.cxx  fregl_space_transformer.h  fregl_util.cxx  fregl_util.h  register_list.py  register_pairs.py
fsexe/: CMakeLists.txt  assign_signals.cxx  cmake_install.cmake  fuse_image_stacks.cxx  generate_color_stack.cxx  image_pair_list.py  layer_analysis.cxx  lsm_to_tiff.cxx  max_project_multi_channels.cxx  montage_blending.cxx  mosaic_image_pair.cxx  mosaic_images.cxx  multi_channels_2D.cxx  (+7 more)
(+2312 files in other folders)
